--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,12 @@ github_username:  loopholes
 theme: minima
 plugins:
   - jekyll-feed
-
+header_pages:
+  - about.md
+  - digitalization.md
+  - sustainability.md
+  - engagement.md
+  - business.md
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
