--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ header_pages:
   - about.md
   - digitalization.md
   - sustainability.md
-  - engagement.md
-  - business.md
+  - stakeholder engagement.md
+  - business & economy.md
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
