--- a/_config.yml
+++ b/_config.yml
@@ -33,10 +33,10 @@ plugins:
   - jekyll-feed
 header_pages:
   - about.md
-  - digitalization.md
-  - sustainability.md
-  - stakeholder engagement.md
-  - business & economy.md
+#  - digitalization.md
+#  - sustainability.md
+#  - stakeholder engagement.md
+#  - business & economy.md
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
