--- a/_config.yml
+++ b/_config.yml
@@ -31,8 +31,9 @@ github_username:  loopholes
 theme: minima
 plugins:
   - jekyll-feed
-#header_pages:
- # - about.md
+minima:
+ header_pages:
+  - about.md
 #  - digitalization.md
 #  - sustainability.md
 #  - stakeholder engagement.md
