--- a/_config.yml
+++ b/_config.yml
@@ -60,7 +60,7 @@ minima:
 # order as they should show up.
 #
  header_pages:
-   - about.md
+   - about.markdown
 
 # Set to `true` to show excerpts on the homepage.
 #
