--- a/_config.yml
+++ b/_config.yml
@@ -60,8 +60,9 @@ minima:
 # order as they should show up.
 #
  header_pages:
-   - about.html
-
+   - about.md
+   - digitalization.md
+   - sustainability.md
 # Set to `true` to show excerpts on the homepage.
 #
 # show_excerpts: false
