--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ github_username:  loopholes
 theme: minima
 plugins:
   - jekyll-feed
-minima:
+#minima:
   # Minima date format.
   # Refer to https://shopify.github.io/liquid/filters/date/ if you want to customize this.
   #
