--- a/_config.yml
+++ b/_config.yml
@@ -59,10 +59,10 @@ minima:
 # If you want to link only specific pages in your header, uncomment this and add the path to the pages in
 # order as they should show up.
 #
- header_pages:
-   - about.md
-   - digitalization.md
-   - sustainability.md
+# header_pages:
+ #  - about.md
+  # - digitalization.md
+  # - sustainability.md
 # Set to `true` to show excerpts on the homepage.
 #
 # show_excerpts: false
