--- a/_config.yml
+++ b/_config.yml
@@ -59,9 +59,11 @@ minima:
 # If you want to link only specific pages in your header, uncomment this and add the path to the pages in
 # order as they should show up.
 #
+include:
+  - _pages
 header_pages:
  #  - about.md
-  # - digitalization.md
+  - _pages/digitalization.md
   # - sustainability.md
 # Set to `true` to show excerpts on the homepage.
 #
@@ -70,6 +72,7 @@ header_pages:
 #  - sustainability.md
 #  - stakeholder engagement.md
 #  - business & economy.md
+
 # Exclude from processing.
 # The following items will not be processed, by default.
 # Any item listed under the `exclude:` key here will be automatically added to
