--- a/_config.yml
+++ b/_config.yml
@@ -62,8 +62,11 @@ minima:
 include:
   - _pages
 header_pages:
- #  - about.md
+  - _pages/about.markdown
   - _pages/Digitalization home.md
+  - _pages/Stakeholder engagement home.md
+  - _pages/sustainabilityHome.md
+  - _pages/Business home.md
   # - sustainability.md
 # Set to `true` to show excerpts on the homepage.
 #
