--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ header_pages:
   - _pages/about.markdown
   - _pages/Digitalization home.md
   - _pages/Stakeholder engagement home.md
-  - _pages/sustainabilityHome.md
+  - _pages/sustainability home.md
   - _pages/Business home.md
   # - sustainability.md
 titles_from_headings:
