--- a/_config.yml
+++ b/_config.yml
@@ -67,6 +67,7 @@ header_pages:
   - _pages/sustainability home.md
   - _pages/Stakeholder engagement home.md
   - _pages/Business home.md
+  - _pages/credits.md
   # - sustainability.md
 titles_from_headings:
   enabled:     true
